FIX: Navbar margin on mobile (#541)

--- a/src/pydata_sphinx_theme/assets/styles/_navbar.scss
+++ b/src/pydata_sphinx_theme/assets/styles/_navbar.scss
@@ -8,6 +8,17 @@
     height: 100%;
   }
 
+  // On smaller screens, add margin to the navbar start/stop
+  @include media-breakpoint-down(lg) {
+    #navbar-start {
+      margin-left: 1em;
+    }
+
+    button.navbar-toggler {
+      margin-right: 1em;
+    }
+  }
+
   @include media-breakpoint-up(lg) {
     // navbar-end-items should be on one line if possible
     #navbar-end > .navbar-end-item {
@@ -27,7 +38,6 @@
   // If there's no logo image, we use a p element w/ the site title
   p {
     margin-bottom: 0;
-    margin-left: 1em;
   }
 
   // If there's a logo, it'll be in an img block
